# librs

./: .gitignore  .travis.yml  Makefile  Makefile.am  README.md  configure.ac  librs.3
src/: internal.c  internal.h  librs.h  list.c  list.h  reed_solomon.c
tests/: alloc_tests.c  extra_tests.c  rs_tests.c  test_codes.h  test_rslib.c
